PlayList Loading from player-state-service

--- a/angular-player/src/app/audio-player/audio-player/audio-player.component.html
+++ b/angular-player/src/app/audio-player/audio-player/audio-player.component.html
@@ -1,2 +1,5 @@
-<app-play-list></app-play-list>
-<app-player-controls></app-player-controls>
+
+<div id="skin">
+  <app-play-list></app-play-list>
+  <app-player-controls></app-player-controls>
+</div>
