Services Refactor Starts: - Created folder for player services - Created a new service for playList - Refactoring StateService as Observable
Player Controls:
- Class binding for playing status
- Play/Pause Works

--- a/angular-player/src/app/audio-player/audio-player/audio-player.component.html
+++ b/angular-player/src/app/audio-player/audio-player/audio-player.component.html
@@ -4,9 +4,8 @@
 
   <article id="playing-info" class="container">
     <p class="trackinfo">
-      <span id="audio-name">{{ playerState.audioTitle }}</span>
-      <span id="audio-duration">{{ audioPlayer.currentTime | async }} / {{ audioPlayer.duration | async }}</span>
-
+      <span id="audio-name">{{ (stateService.playerState$ | async).audioTitle }}</span>
+      <span id="audio-duration">{{ (stateService.playerState$ | async).currentTime }} / {{ (stateService.playerState$ | async).duration }}</span>
     </p>
 
     <div id="progress-bar-background">
@@ -15,11 +14,13 @@
     </div>
   </article>
 
-    <article>
-      <ul class="controls">
-        <app-player-controls
-          *ngFor="let control of playerState.controlList" [control]="control">
-        </app-player-controls>
-      </ul>
-    </article>
+  <article>
+    <ul class="controls">
+      <app-player-controls
+        *ngFor="let control of playerState.controlList"
+        [control]="control"
+        (click)="handleClickControl(control)">
+      </app-player-controls>
+    </ul>
+  </article>
 </div>
