--- a/angular-player/src/app/audio-player/player-controls/player-controls.component.html
+++ b/angular-player/src/app/audio-player/player-controls/player-controls.component.html
@@ -1,6 +1,5 @@
 <button
-  [ngClass]="{'playing': !playerState.isPlaying}"
-  (click)="_handleClicControls()">
+  [ngClass]="{'playing': playerState.isPlaying, 'paused': !playerState.isPlaying}">
   <i [ngClass]="['fas', 'fa-' + control]" ></i>
   {{ control }}
 </button>
