--- a/angular-player/src/app/audio-player/player-controls/player-controls.component.html
+++ b/angular-player/src/app/audio-player/player-controls/player-controls.component.html
@@ -1,5 +1,5 @@
-<button
-  [ngClass]="{'playing': playerState.isPlaying, 'paused': !playerState.isPlaying}">
-  <i [ngClass]="['fas', 'fa-' + control]" ></i>
-  {{ control }}
+<button mat-icon-button
+  [id]="control.name"
+  [ngClass]="{'playing': stateService.isPlaying, 'paused': !stateService.isPlaying}">
+  <i [ngClass]="['material-icons', control.name]" >{{ control.materialIcon }}</i>
 </button>
