--- a/angular-player/src/app/audio-player/audio-player/audio-player.component.html
+++ b/angular-player/src/app/audio-player/audio-player/audio-player.component.html
@@ -2,25 +2,25 @@
 <div id="skin" class="container">
   <app-play-list></app-play-list>
 
-  <article id="playing-info" class="container">
-    <p class="trackinfo">
-      <span id="audio-name">{{ (stateService.playerState$ | async).audioTitle }}</span>
-      <span id="audio-duration">{{ (stateService.playerState$ | async).currentTime }} / {{ (stateService.playerState$ | async).duration }}</span>
+  <article [id]="'playing-info'">
+    <p [ngClass]="'trackinfo'">
+      <span [id]="'audio-name'">{{ (stateService.playerState$ | async).audioTitle }}</span>
+      <span [class]="'fill-remaining-space'"></span>
+      <span [id]="'audio-duration'">{{ (stateService.playerState$ | async).currentTime }} / {{ (stateService.playerState$ | async).duration }}</span>
     </p>
 
-    <div id="progress-bar-background">
-      <div id="progress-bar"><i class="fas fa-compact-disc"></i></div>
-
+    <div [id]="'progress-bar-container'">
+      <mat-progress-bar [id]="'progress-bar-background'" mode="determinate" value="40">
+      </mat-progress-bar>
+      <div [id]="'progress-bar'"><mat-icon color="accent">album</mat-icon></div>
     </div>
   </article>
 
-  <article>
-    <ul class="controls">
-      <app-player-controls
-        *ngFor="let control of playerState.controlList"
-        [control]="control"
-        (click)="handleClickControl(control.name)"><i class="material-icons">{{ control.materialIcon }}</i>
-      </app-player-controls>
-    </ul>
+  <article [ngClass]="'controls'">
+    <app-player-controls
+      *ngFor="let control of playerState.controlList"
+      [control]="control"
+      (click)="handleClickControl(control.name)">
+    </app-player-controls>
   </article>
 </div>
