--- a/angular-player/src/app/audio-player/play-list/play-list.component.html
+++ b/angular-player/src/app/audio-player/play-list/play-list.component.html
@@ -1,4 +1,19 @@
 <div id="playlist">
+  <mat-nav-list color="primary">
+    <mat-list-item *ngFor="let audio of playList; let i = index" id="audio{{i}}">
+        <a matLine href="/play/{{i}}">{{ audio.audioTitle }}</a>
+        <a mat-icon-button href="/play/{{i}}">
+          <mat-icon color = "accent">play_arrow</mat-icon>
+        </a>
+        <a mat-icon-button href="/edit/{{i}}">
+          <mat-icon color = "accent">edit</mat-icon>
+        </a>
+        <a mat-icon-button href="/delete/{{i}}">
+          <mat-icon color = "accent">delete_forever</mat-icon>
+        </a>
+    </mat-list-item>
+  </mat-nav-list>
+
   <ol>
     <li *ngFor="let audio of playList; let i = index" id="audio{{i}}">{{ audio.audioTitle }}<div [ngClass]="'audioButtons'"></div></li>
   </ol>
