Add anim to play pause buttons and playlist

--- a/angular-player/src/app/audio-player/audio-player/audio-player.component.html
+++ b/angular-player/src/app/audio-player/audio-player/audio-player.component.html
@@ -20,6 +20,7 @@
     <app-player-controls
       *ngFor="let control of playerState.controlList"
       [control]="control"
+      [ngClass]="{'play-pause': control.name === 'play' || control.name === 'pause'}"
       (click)="handleClickControl(control.name)">
     </app-player-controls>
   </article>
