--- a/angular-player/src/app/audio-player/player-controls/player-controls.component.html
+++ b/angular-player/src/app/audio-player/player-controls/player-controls.component.html
@@ -1,5 +1,5 @@
-<button mat-icon-button color = "accent"
-  [id]="control.name"
-  [ngClass]="{'playing': stateService.isPlaying, 'paused': !stateService.isPlaying}">
-  <mat-icon [ngClass]="['material-icons', control.name]">{{ control.materialIcon }}</mat-icon>
+<button @show-hide mat-icon-button color = "accent"
+  *ngIf="playerState.isPlaying && control.name !== 'play' || !playerState.isPlaying && control.name !== 'pause'"
+  [ngClass]="{'playing': playerState.isPlaying, 'paused': !playerState.isPlaying}">
+  <mat-icon [ngClass]="['material-icons', control.name, 'md-48']">{{ control.materialIcon }}</mat-icon>
 </button>
