--- a/angular-player/src/styles.scss
+++ b/angular-player/src/styles.scss
@@ -1,18 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import '@angular/material/prebuilt-themes/purple-green.css';
-
-$primary_color : #7B1FA2;
-$accent_color : #69F0AE;
-$warn_color : #F44336;
+@import "variables.scss";
 
 html, body { height: 100%; color: $primary_color}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
-.accent {
-  color: $accent_color;
-}
-
-.warn {
-  color: $warn_color;
-}
