added color attribute

--- a/angular-player/src/styles.scss
+++ b/angular-player/src/styles.scss
@@ -3,5 +3,18 @@
 @import '@angular/material/prebuilt-themes/purple-green.css';
 @import "variables.scss";
 
+*[primary] {
+  color: $primary_color;
+}
+
+*[accent] {
+  color: $accent_color;
+}
+
+*[warn] {
+  color: $warn_color;
+}
+
 html, body { height: 100%; color: $primary_color}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
