Añadido header Ajustado alto de la APP para cubrir todo el navegador Añadido scroll a playList con estilos para chrome

--- a/angular-player/src/app/audio-player/audio-player/audio-player.component.html
+++ b/angular-player/src/app/audio-player/audio-player/audio-player.component.html
@@ -1,6 +1,14 @@
 
 <mat-sidenav-container>
   <article>
+    <mat-toolbar>
+      <mat-toolbar-row [class]="'mat-h1'">
+        Audio Player - {{ (stateService.playerState$ | async).audioTitle }}
+      </mat-toolbar-row>
+    </mat-toolbar>
+  </article>
+
+  <article [id]="'play-list'">
     <app-play-list></app-play-list>
   </article>
 
