--- a/angular-player/src/app/audio-player/audio-player/audio-player.component.scss
+++ b/angular-player/src/app/audio-player/audio-player/audio-player.component.scss
@@ -4,6 +4,10 @@ app-audio-player {
   text-align: center;
 }
 
+mat-toolbar .mat-h1{
+  margin: 16px 0;
+}
+
 article.controls {
   width: fit-content;
   height: fit-content;
