Corrección estilos header Prevenir multiples pulsaciones de play/pausa Creada función para actualizar tiempo de audio transcurrido -> (No actualiza en html pero sí saca correcto por consola)

--- a/angular-player/src/app/audio-player/audio-player/audio-player.component.html
+++ b/angular-player/src/app/audio-player/audio-player/audio-player.component.html
@@ -1,10 +1,8 @@
 
 <mat-sidenav-container>
   <article>
-    <mat-toolbar>
-      <mat-toolbar-row [class]="'mat-h1'">
+    <mat-toolbar [class]="'mat-h1'">
         Audio Player - {{ (stateService.playerState$ | async).audioTitle }}
-      </mat-toolbar-row>
     </mat-toolbar>
   </article>
 
