--- a/angular-player/src/app/audio-player/audio-player/audio-player.component.scss
+++ b/angular-player/src/app/audio-player/audio-player/audio-player.component.scss
@@ -4,13 +4,13 @@ app-audio-player {
   text-align: center;
 }
 
-mat-toolbar .mat-h1{
-  margin: 16px 0;
+mat-toolbar.mat-h1{
 }
 
 article.controls {
   width: fit-content;
-  height: fit-content;
+  height: 50px;
+  overflow: hidden;
   left: 0;
   right: 0;
   margin: 20px auto;
