--- a/angular-player/src/app/audio-player/audio-player/audio-player.component.html
+++ b/angular-player/src/app/audio-player/audio-player/audio-player.component.html
@@ -15,17 +15,14 @@
       <span [id]="'audio-name'">{{ (stateService.playerState$ | async).audioTitle }}</span>
       <span [class]="'fill-remaining-space'"></span>
       <span [id]="'audio-times'">
-        <ng-container *ngIf="stateService.playerState.currentTime; else defaultTimes">
-          {{ (playerState$ | async).currentTime | date:'mm:ss' }} / {{ (stateService.playerState$ | async).duration | date:'mm:ss' }}
-        </ng-container>
-        <ng-template #defaultTimes> --:-- / --:-- </ng-template>
+        {{ (stateService.playerState$ | async).currentTime | date:'mm:ss' }} / {{ (stateService.playerState$ | async).duration | date:'mm:ss' }}
       </span>
     </p>
 
     <div [id]="'progress-bar-container'">
       <mat-progress-bar [id]="'progress-bar-background'" mode="determinate" value="{{(getProgress())}}">
       </mat-progress-bar>
-      <div [id]="'progress-bar'"><mat-icon color="accent">album</mat-icon></div>
+      <div [id]="'progress-bar'" style="display:none;"><mat-icon color="accent">album</mat-icon></div>
     </div>
   </article>
 
