Animación Fade y duración: - Ajuste en tiempos de animaciones fade in y fade out - Añadida duración de audios en PlayList

--- a/angular-player/src/app/audio-player/play-list/play-list.component.html
+++ b/angular-player/src/app/audio-player/play-list/play-list.component.html
@@ -4,6 +4,7 @@
     id="audio{{i}}" title="{{ audio.credits }}">
       <h2 matLine>{{ audio.audioTitle }}</h2>
       <p matLine accent>Artist: {{ audio.artist }}</p>
+      <p>{{ audio.duration | date:'mm:ss'}}</p>
       <a mat-icon-button href="/play/{{i}}">
         <mat-icon color = "accent">play_arrow</mat-icon>
       </a>
