--- a/angular-player/src/app/audio-player/audio-player/audio-player.component.html
+++ b/angular-player/src/app/audio-player/audio-player/audio-player.component.html
@@ -2,6 +2,7 @@
 <mat-sidenav-container>
   <article>
     <mat-toolbar [class]="'mat-h1'">
+      <img src="/assets/angular-player.png">
         Audio Player - {{ (stateService.playerState$ | async).audioTitle }}
     </mat-toolbar>
   </article>
