Player Refactor: - El reproductor se ha movido a player state service para poder llamarlo desde playList - Añadidos progress y isLastAudio a state - Pendiente revisar por qué no se actualiza la duración hasta que se pulsa play

--- a/angular-player/src/app/audio-player/audio-player/audio-player.component.html
+++ b/angular-player/src/app/audio-player/audio-player/audio-player.component.html
@@ -21,7 +21,7 @@
     </p>
 
     <div [id]="'progress-bar-container'">
-      <mat-progress-bar [id]="'progress-bar-background'" mode="determinate" value="{{(getProgress())}}">
+      <mat-progress-bar [id]="'progress-bar-background'" mode="determinate" value="{{ (stateService.playerState$ | async).progress }}">
       </mat-progress-bar>
       <div [id]="'progress-bar'" style="display:none;"><mat-icon color="accent">album</mat-icon></div>
     </div>
