Tooltip con estilo material design

--- a/angular-player/src/app/audio-player/play-list/play-list.component.html
+++ b/angular-player/src/app/audio-player/play-list/play-list.component.html
@@ -1,7 +1,7 @@
 <div id="play-list">
   <mat-nav-list [@audioPlayList] = playList.length>
     <mat-list-item [@activeAudio] = "i === playerState.currentAudio" *ngFor="let audio of playList; let i = index"
-    id="audio{{i}}" title="{{ audio.credits }}">
+    id="audio{{i}}"  matTooltip="{{ audio.credits }}">
       <h2 matLine>{{ audio.audioTitle }}</h2>
       <p matLine accent>Artist: {{ audio.artist }}</p>
       <p>{{ audio.duration | date:'mm:ss'}}</p>
