--- a/angular-player/src/variables.scss
+++ b/angular-player/src/variables.scss
@@ -4,3 +4,8 @@ $accent_color : #69F0AE;
 $warn_color : #F44336;
 
 $border_radius_default: 5px;
+
+
+$md-48: 48px !important;
+$md-36: 36px !important;
+
