Creado componente file-upload: - Configurada la app para funcionar con rutas - Añadido al reproductor botón en barra de título - Llamada a diálogo para abrir formulario (componente file-upload) - Subida de archivo: input type file oculto para mantener estilos material - Añadidos estilos

--- a/angular-player/src/app/audio-player/audio-player/audio-player.component.html
+++ b/angular-player/src/app/audio-player/audio-player/audio-player.component.html
@@ -7,7 +7,7 @@
         <span [class]="'fill-remaining-space'"></span>
         <a mat-icon-button
           (click)= "fileUpload()">
-          <mat-icon color = "accent" [ngClass]="['md-36']">cloud_upload</mat-icon>
+          <mat-icon [ngClass]="['md-36']">cloud_upload</mat-icon>
         </a>
     </mat-toolbar>
   </article>
