--- a/angular-player/src/variables.scss
+++ b/angular-player/src/variables.scss
@@ -3,6 +3,8 @@ $primary_color : #7B1FA2;
 $accent_color : #69F0AE;
 $warn_color : #F44336;
 
+$primary_text : #ce93d8;
+
 $border_radius_default: 5px;
 
 
