--- a/angular-player/src/app/audio-player/file-upload/file-upload.component.html
+++ b/angular-player/src/app/audio-player/file-upload/file-upload.component.html
@@ -52,7 +52,7 @@
       </li>
       <li class="center">
         <button mat-stroked-button class="btn btn-success"
-          type="submit" [disabled]="!isValidForm()">
+          type="submit" [disabled]="!audioUploadForm.form.valid">
           <mat-icon>cloud_upload</mat-icon> Submit
         </button>
       </li>
