--- a/angular-player/src/app/audio-player/file-upload/file-upload.component.html
+++ b/angular-player/src/app/audio-player/file-upload/file-upload.component.html
@@ -1,61 +1,66 @@
-<h2 [class]="'mat-h1'">Audio Upload</h2>
-<div *ngIf="loading"><mat-spinner></mat-spinner></div>
+<h2 mat-dialog-title [class]="'mat-h1'">Audio Upload</h2>
+<p mat-subheader warn [class]="'center full_width'">El archivo no se subirá al servidor.<br> Función en desarrollo.</p>
+<div *ngIf="loading" [class]="'center'"><mat-spinner></mat-spinner></div>
 <div [hidden]="loading">
-  <form (ngSubmit)="onSubmit()" #audioUploadForm="ngForm">
+  <form (ngSubmit)="onSubmit(audioUploadForm.form.value)" #audioUploadForm="ngForm">
     <ul>
-      <li>
-        <a mat-stroked-button (click)="chooseFile()">
-          <mat-icon>folder</mat-icon> Select File
-        </a>
-        <mat-form-field>
-          <input matInput disabled  id="displaySourceURL"
-              [(ngModel)]="sourceURL" name="displaySourceURL">
-        </mat-form-field>
-        <input #inputFile hidden class="file" type="file" id="sourceURL"
-              [(ngModel)]="sourceURL" name="sourceURL" required>
-      </li>
-      <li>
-        <mat-form-field class="full_width">
-          <input matInput placeholder="Audio Title" id="title"
-              [(ngModel)]="audioTitle" name="title" required>
-          <button mat-button matSuffix mat-icon-button
-            *ngIf="audioTitle"
-            aria-label="Clear"
-            (click)="audioTitle=''">
-            <mat-icon>close</mat-icon>
-          </button>
-        </mat-form-field>
-      </li>
-      <li>
-        <mat-form-field class="full_width">
-          <input matInput placeholder="Artist name" id="artist"
-            [(ngModel)]="artist" name="artist" required>
-          <button mat-button matSuffix mat-icon-button
-            *ngIf="artist"
-            aria-label="Clear"
-            (click)="artist=''">
-            <mat-icon>close</mat-icon>
-          </button>
-        </mat-form-field>
-      </li>
-      <li>
-        <mat-form-field class="full_width">
-          <input matInput placeholder="Credits" id="credits"
-            [(ngModel)]="credits" name="credits" required>
-          <button mat-button matSuffix mat-icon-button
-            *ngIf="credits"
-            aria-label="Clear"
-            (click)="credits=''">
-            <mat-icon>close</mat-icon>
-          </button>
-        </mat-form-field>
-      </li>
-      <li class="center">
-        <button mat-stroked-button class="btn btn-success"
-          type="submit" [disabled]="!audioUploadForm.form.valid">
+      <mat-dialog-content>
+        <li>
+          <a mat-stroked-button (click)="chooseFile()">
+            <mat-icon>folder</mat-icon> Select File
+          </a>
+          <mat-form-field>
+            <input matInput disabled  id="displaySourceURL"
+                [(ngModel)]="audio.sourceURL" name="displaySourceURL">
+          </mat-form-field>
+          <input #inputFile hidden class="file" type="file" id="sourceURL"
+                [(ngModel)]="fileData" name="file" required
+                (ngModelChange)="fileUpdated()">
+        </li>
+        <li>
+          <mat-form-field class="full_width">
+            <input matInput placeholder="Audio Title" id="title"
+                [(ngModel)]="audio.audioTitle" name="title" required>
+            <button mat-button matSuffix mat-icon-button aria-label="Clear"
+              *ngIf="audio.audioTitle"
+              (click)="audio.audioTitle=''">
+              <mat-icon>close</mat-icon>
+            </button>
+          </mat-form-field>
+        </li>
+        <li>
+          <mat-form-field class="full_width">
+            <input matInput placeholder="Artist name" id="artist"
+              [(ngModel)]="audio.artist" name="artist" required>
+            <button mat-button matSuffix mat-icon-button aria-label="Clear"
+              *ngIf="audio.artist"
+              (click)="audio.artist=''">
+              <mat-icon>close</mat-icon>
+            </button>
+          </mat-form-field>
+        </li>
+        <li>
+          <mat-form-field class="full_width">
+            <input matInput placeholder="Credits" id="credits"
+              [(ngModel)]="audio.credits" name="credits" required>
+            <button mat-button matSuffix mat-icon-button aria-label="Clear"
+              *ngIf="audio.credits"
+              (click)="audio.credits=''">
+              <mat-icon>close</mat-icon>
+            </button>
+          </mat-form-field>
+        </li>
+      </mat-dialog-content>
+      <mat-dialog-actions align="end">
+        <button mat-stroked-button class="btn btn-cancel"
+        [mat-dialog-close]=false>
+          <mat-icon>cancel</mat-icon> Cancel
+        </button>
+        <button mat-stroked-button class="btn btn-success" [disabled]="!audioUploadForm.form.valid"
+        type="submit">
           <mat-icon>cloud_upload</mat-icon> Submit
         </button>
-      </li>
+      </mat-dialog-actions>
     </ul>
   </form>
 </div>
